Last Call for Pre-Reg!
Submitted by dehbiam on Thu, 02/19/2015 - 13:02
Hey everyone!

Dont forget that theres only a few days left to Pre-Reg! Dont miss out on the opportunity for early access to the Dealers Room, a shorter registration line, and the chance to win a Blu-Ray player and the full series/artbook for K!

https://commerce.cashnet.com/BGSUANO

Read more about Last Call for Pre-Reg!
Panel Submissions are CLOSED for 2015
Submitted by dehbiam on Mon, 02/09/2015 - 10:43
Ad sales and panel submissions are now closed! If you submitted a panel you should hear back from us in the next few weeks about whether or not your panels were accepted!

Read more

Important Dates
Submitted by dehbiam on Thu, 01/29/2015 - 17:41
Deadline to purchase an advertisement - Feb 5
Deadline to submit a panel - Feb 7
Deadline to buy Pre-Reg pass - Feb 21
Animarathon - March 21!
Make sure you dont miss out!

Read more

Dealer Registration is NOW CLOSED.
Submitted by admin on Fri, 01/16/2015 - 22:20
Dealer Registration for Animarathon (2015) is NOW CLOSED. Thanks for all of our awesome dealers for getting in contact with our president and coordinating to get registered for 2015. Were looking forward to a great convention and you should be too!

Read more

Pre-Reg and Ad Problems
Submitted by dehbiam on Thu, 11/06/2014 - 08:36
Hello Again,

It was brough to our attention that the links for Pre-Reg and Advertisements were not working properly. We apologize for any inconvenience and frustration. The links in the original two posts have been updated, and this is it again:

https://commerce.cashnet.com/BGSUANO

Read more

Panel Submissions NOT Open... Yet
Submitted by dehbiam on Fri, 09/26/2014 - 14:49
Hello Everyone!

Its come to our attention that some people think theyve missed the deadline for panel submissions for Animarathon XIII.
