@@ -39,6 +39,7 @@
   <h1>ANO Archive</h1>
   <p>This is a collection of data and stories of ANO and Animarathon's past.</p>
   <p>For our collection of photographs please visit our <a href="./gallery.html">gallery</a>.</p>
+  <p>Our News Archive is currently a work in progress. It is available as a <a href="./news.txt">text file</a>.</p>
   </section>
   </div>
 </article>
