@@ -35,24 +35,24 @@
 <div class="backdrop">
 <article class="container">
   <div class="row">
-  <section class="twelve columns">
-  <h1 style="text-align: center;">Animarathon Credits</h1>
-  <p style="text-align: center;">To all of you who made Animarathon possible. We thank you from the bottom of our hearts.</p>
-  <p style="text-align: center;">To all the guests, artists, vendors, panelists, security, and university community who make Animarathon happen. Thank you.</p>
-  <p style="text-align: center;">To our volunteers who selflessly dedicate their time to Animarathon. Thank You.</p>
-  <p style="text-align: center;">To our special guests who spend their time at Animarathon. Thank You.</p>
-  <p style="text-align: center;">To the first members of ANO who started this. Thank You.</p>
-  <p style="text-align: center;">To the past officers who kept this all going. Thank You.</p>
-  <p style="text-align: center;">To the <a href="https://www.bgsu.edu/campus-activities.html">Office of Campus Activities</a>, who helps us so much. Thank You.</p>
-  <p style="text-align: center;">To <a href="https://about.gitlab.com/">GitLab</a>, who provides version control and hosting for our website. Thank You.</p>
-  <p style="text-align: center;"> To <a href="https://www.theleagueofmoveabletype.com/">The League of Movable Type</a> who made the typefaces our website uses. Thank You.</p>
-  <p style="text-align: center;">To Dave Gamache, who created the <a href="http://getskeleton.com/">Skeleton Framework</a> our website is based on. Thank You.</p>
-  <p style="text-align: center;"> To <a href="http://www.avasdemon.com/">Michelle Czajkowski</a> who did a wonderful job drawing our banner and 2015 badges. Thank You.</p>
-  <p style="text-align: center;">To the <a href="https://www.bgsu.edu/bowen-thompson-student-union.html">Bowen Thompson Student Union</a> Staff, who help make our weekly meetings possible. Thank You.</p>
-  <p style="text-align: center;">To you for reading. Thank You.</p>
+  <section class="twelve columns" style="text-align: center;">
+  <h1>Animarathon Credits</h1>
+  <p>To all of you who made Animarathon possible. We thank you from the bottom of our hearts.</p>
+  <p>To all the guests, artists, vendors, panelists, security, and university community who make Animarathon happen. Thank you.</p>
+  <p>To our volunteers who selflessly dedicate their time to Animarathon. Thank You.</p>
+  <p>To our special guests who spend their time at Animarathon. Thank You.</p>
+  <p>To the first members of ANO who started this. Thank You.</p>
+  <p>To the past officers who kept this all going. Thank You.</p>
+  <p>To the <a href="https://www.bgsu.edu/campus-activities.html">Office of Campus Activities</a>, who helps us so much. Thank You.</p>
+  <p>To <a href="https://about.gitlab.com/">GitLab</a>, who provides version control and hosting for our website. Thank You.</p>
+  <p> To <a href="https://www.theleagueofmoveabletype.com/">The League of Movable Type</a> who made the typefaces our website uses. Thank You.</p>
+  <p>To Dave Gamache, who created the <a href="http://getskeleton.com/">Skeleton Framework</a> our website is based on. Thank You.</p>
+  <p> To <a href="http://www.avasdemon.com/">Michelle Czajkowski</a> who did a wonderful job drawing our banner and 2015 badges. Thank You.</p>
+  <p>To the <a href="https://www.bgsu.edu/bowen-thompson-student-union.html">Bowen Thompson Student Union</a> Staff, who help make our weekly meetings possible. Thank You.</p>
+  <p>To you for reading. Thank You.</p>
 
   <p></p>
-  <p style="text-align: center;"><a class="button" href="index.html">Thank you all!</a></p><br>
+  <p><a class="button" href="index.html">Thank you all!</a></p><br>
   <img src="media/media_nonfree/sisters.png" style="margin-left: auto; margin-right: auto;" alt="Two Sisters, side by side, lost on the internet, yet smiling none the less.">
   </section>
   </div>
