@@ -188,7 +188,7 @@ happy for all of our guests. In general the rules simply ask you to do two thing
       <li>If a competitor has pre-recorded dialogue or music they would like to use they must either bring a player, or a CD that can be read by a standard audio player.</li>
       <li>Competitors should not bring music DVD's, or other similar formats as they will not be usable by us.</li>
       <li>Each skit should be less than five minutes in length.</li>
-      <li>Each skit should be safe for the audience and preformers and not violate Animarathon rules.</li>
+      <li>Each skit should be safe for the audience and performers and not violate Animarathon rules.</li>
   </ul>
   <h3>Screening</h3>
   <ul>
@@ -200,7 +200,7 @@ happy for all of our guests. In general the rules simply ask you to do two thing
   <ul>
       <li>Competitors will follow the instructions of the MCs, Judges, and other staff.</li>
       <li>Failure to follow skit rules will result in disqualification.</li>
-      <li>Please do not hesistate to ask Animarathon Staff any questions.</li>
+      <li>Please do not hesitate to ask Animarathon Staff any questions.</li>
   </ul>
   </section>
   <section class="six columns">
@@ -208,8 +208,8 @@ happy for all of our guests. In general the rules simply ask you to do two thing
   <h3>Cosplay Requirements</h3>
   <ul>
     <li>All cosplay entered outside of the found item and youth categories must be either original or altered by the competitor themselves. Competitor Cosplays must meet this criteria by 60% or more.</li> 
-    <li>No comissioned or premade costumes are allowed in the competition.</li>
-    <li>To be elegible for a major award, the competitors costume must be reflective of Japanese Culture. There is an exeption for the "Pop Culture" award.</li>
+    <li>No commissioned or premade costumes are allowed in the competition.</li>
+    <li>To be eligible for a major award, the competitors costume must be reflective of Japanese Culture. There is an exception for the "Pop Culture" award.</li>
     <li>Please bring a official printed reference picture for the character. Do not bring fan-art.</li>
     <li>All Costumes are judged before the event. If a competitor is more then ten minutes late to pre-judging that competitor will be disqualified.</li>
   </ul>
@@ -217,7 +217,7 @@ happy for all of our guests. In general the rules simply ask you to do two thing
   <ol>
     <li>Novice</li>
     <ul>
-       <li>For competitiors who have been in less then three competitions and have not won.</li>
+       <li>For competitors who have been in less then three competitions and have not won.</li>
        <li>Beginners who are using original cosplays should apply here.</li>
     </ul>
     <li>Journeyman</li>
@@ -240,7 +240,7 @@ happy for all of our guests. In general the rules simply ask you to do two thing
       <li>Found-Item</li>
       <ul>
           <li>For cosplays consisting of less then 60% original material.</li>
-          <li>This category excludes comissioned and pre-bought cosplay sets.</li>
+          <li>This category excludes commissioned and pre-bought cosplay sets.</li>
       </ul>
       <li>Original Character</li>
       <ul>
@@ -255,7 +255,7 @@ happy for all of our guests. In general the rules simply ask you to do two thing
       <li>Best Youth</li>
       <ul>
           <li>This category is for competitors aged ten and under.</li>
-          <li>A Parent or Guardian <strong>must</strong> be with contestents in this category <strong>at all times</strong>.</li>
+          <li>A Parent or Guardian <strong>must</strong> be with contestants in this category <strong>at all times</strong>.</li>
       </ul>
   </ul>
   <h3>Other Masqurade Rules</h3>
@@ -268,6 +268,22 @@ happy for all of our guests. In general the rules simply ask you to do two thing
       <li>Failure to follow masquerade rules will result in disqualification.</li>
       <li>Please do not hesistate to ask us if you have any questions.</li>
   </ul>
+  </section>
+  </div>
+  <section class="twelve columns" style="text-align: center;">
+  <h2>Our Promise to You</h2>
+  <p>Thank you for reading this far! Seriously, great job!</p>
+  <p>We don't expect you to follow our rules for nothing.</p>
+  <p>That's why we're promising you two things in return.</p>
+  <h3>改善</h3>
+  <p>Our first promise to you is 改善 (Kaizen).</p>
+  <p>Kaizen is the Japanese process of continuous improvement.</p>
+  <p>That means that Animarathon will reflect itself continuously.</p>
+  <p>To the benefit of itself and the community around it.</p>
+  <h3>A Good Time</h3>
+  <p>Our Second, but equally important promise to you is a good time.</p>
+  <p>You've earned it.</p>
+  <p>💖</p>
   </section>
   </div>
 </article>
