@@ -39,4 +39,7 @@
   <url>
     <loc>https://animarathon.com/archive.html</loc>
   </url>
+  <url>
+    <loc>https://animarathon.com/gallery.html</loc>
+  </url>
 </urlset>
