@@ -1,3 +1,13 @@
+November 13th 2016
+Two Day Animarathon!
+
+We will be hosting Animapathon, a charity event on the 15th of November. Our Animarathon Panel and Cosplay submission form are also open!
+
+November 5th 2016
+Two Day Animarathon!
+
+Based on a poll, we have decided to make Animarathon 2018 a two day long convention! We're doubling everything, so stay tuned!
+
 Last Call for Pre-Reg!
 Submitted by dehbiam on Thu, 02/19/2015 - 13:02
 Hey everyone!
